# tauri-plugin-authenticator

./: Cargo.toml  DEPENDENTS.md  README.md  package.json
Source/: auth.rs  error.rs  lib.rs  u2f.rs
Source/u2f_crate/: LICENSE  authorization.rs  crypto.rs  messages.rs  protocol.rs  register.rs  u2ferror.rs  util.rs
dist-js/: index.d.ts  index.min.js  index.min.js.map  index.mjs  index.mjs.map
guest-js/: index.ts
src/: auth.rs
