[package]
name = "tauri-plugin-authenticator"
version = "0.0.0"
description = "Use hardware security-keys in your Tauri App."
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
authenticator = { version = "0.3.1" }
once_cell = { version = "1" }
sha2 = { version = "0.10" }
base64 = { version = "0.22" }
chrono = { version = "0.4" }
bytes = { version = "1" }
byteorder = { version = "1" }
openssl = { version = "0.10" }

[dev-dependencies]
rand = { version = "0.8" }
rusty-fork = "0.3"
