[dependencies]
authenticator = "0.3.1"
base64 = "0.22"
byteorder = "1"
bytes = "1"
chrono = "0.4"
log = { version = "0.4.25" }
once_cell = "1"
openssl = "0.10"
serde = { version = "1.0.217" }
serde_json = { version = "1.0.138" }
sha2 = "0.10"
tauri = { version = "2.2.5" }
thiserror = { version = "2.0.11" }

[dev-dependencies]
rand = "0.8"
rusty-fork = "0.3"

[lib]
path = "Source/lib.rs"

[package]
authors = ["Tauri Programme within The Commons Conservancy"]
description = "Use hardware security-keys in your Tauri App."
edition = "2021"
license-file = "LICENSE"
name = "tauri-plugin-authenticator"
rust-version = "1.77.2"
version = "0.0.0"
